# topics

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci-platform.yml  ci-web.yml  ci.yml
platform/: .env  Dockerfile  README.md  alembic.ini  build.sh  gunicorn.conf.py  heroku.yml  pyproject.toml
platform/alembic/: env.py
platform/alembic/versions/: a8de6718f336_add_agents_table.py
platform/scripts/: run-tests.sh
platform/scripts/docker/: build.sh  exec.sh  rm.sh  run.sh  start.sh  stop.sh
platform/src/: main.py  marshal.py  models.py  services.py  settings.py
platform/src/agent/: api.py
platform/tests/: __init__.py  fixtures.py  test_main.py
src/: App.js  App.test.js
web/: README.md
web/src/: App.test.js
