[tool.poetry]
name = "platform"
version = "0.1.0"
description = "Platform microservice"
authors = ["g3"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
alembic = "^1.7.1"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.23"
gunicorn = "^20.1.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pytest = "^6.2.5"
SQLAlchemy-Utils = "^0.37.8"
coverage = "^5.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit = ["src/settings.py"]
